Update main.py and fix requirements.txt
Update main.py
- Add p to the end of the video quality to make it more like a video selection
fix requirements.txt
- Remove the version numbers as all of these libraries are currently being maintained

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-appdirs==1.4.4
-future==0.18.2
-futures==3.0.5
-PyQt5==5.15.6
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-QDarkStyle==3.0.3
-QtPy==2.0.0
-yt-dlp==2022.1.22
+appdirs
+future
+futures
+PyQt5
+PyQt5-Qt5
+PyQt5-sip
+QDarkStyle
+QtPy
+yt-dlp
